# ChangeLog for media-sound/songbird-bin
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2

  29 Mar 2008; Piotr Szymaniak <lazy_bum@o2.pl> +songbird-bin-0.5-r1.ebuild:
  Poe fixed some stuff.

  29 Mar 2008; Piotr Szymaniak <lazy_bum@o2.pl>
  -songbird-bin-0.5_rc2.ebuild, +songbird-bin-0.5.ebuild:
  Version bump.

  22 Mar 2008; Piotr Szymaniak <lazy_bum@o2.pl> -songbird-bin-0.3.ebuild,
  -songbird-bin-0.3.1.ebuild, +songbird-bin-0.5_rc2.ebuild:
  Version bump, ebuild by Poe.
  (http://forums.gentoo.org/viewtopic-p-4982240.html#4982240)

*songbird-bin-0.4.0 (10 Jan 2008)

  10 Jan 2008; Piotr Szymaniak <lazy_bum@o2.pl> +songbird-bin-0.4.0.ebuild:
  Version bump (thx to Poe)

*songbird-bin-0.3.1 (15 Nov 2007)

  15 Nov 2007; Piotr Szymaniak <lazy_bum@o2.pl> +songbird-bin-0.3.1.ebuild:
  Added new Developer Pre-Release.

*songbird-bin-0.3 (31 Oct 2007)

  31 Oct 2007; Piotr Szymaniak <lazy_bum@o2.pl> songbird-bin-0.3.ebuild:
  Version bump.
  Removed old ebuilds.

*songbird-bin-0.3_rc2 (25 Oct 2007)

  25 Oct 2007; Piotr Szymaniak <lazy_bum@o2.pl> +songbird-bin-0.3_rc2.ebuild,
  -songbird-bin-0.3_rc1.ebuild:
  Version bump.

*songbird-bin-0.3_rc1 (17 Oct 2007)

  17 Oct 2007; Piotr Szymaniak <lazy_bum@o2.pl> +songbird-bin-0.3_rc1.ebuild:
  Version bump.