@@ -1,8 +1,5 @@
-DIST Songbird_0.4_linux-i686.tar.gz 19727562 RMD160 2c3e59f271d61e9d31f80c9f9fae6aee4c12d6cd SHA1 d58a9aefd27c73591601e0ddc9646d42c79f1cd4 SHA256 3ce3e85d39fda9b0193a0fc15b436078ff09c87156e4b2b96f186432f4eacc37
-DIST Songbird_0.4_linux-x86_64.tar.gz 20739431 RMD160 790af8657cd0f09c32678337d0e482b1acb744f9 SHA1 a34886808771675b3582ab3d497dc92ab846b428 SHA256 e444c1e3a10a88676f7f69bb234a3230560dff0cae3482e394f17db3311333a0
 DIST Songbird_0.5_linux-i686.tar.gz 22262152 RMD160 7c1ce5f44d0e82a2ef4214475612df0118d96089 SHA1 87a5387c8bc764f454b3ddfd49d20412ffaf5c95 SHA256 b92446f5895d28c0847a7f0cd1c9aafc2a0008023ac5cade134c67111ad45413
 DIST Songbird_0.5_linux-x86_64.tar.gz 22866029 RMD160 c6f026d0e90ac6cacf041efa237e9aae4196f30b SHA1 eef04ec09ddc6d05ddb69dd2fcecc9bd5ecdb7c6 SHA256 7e16d31f041a668269bc941c494721f8cffbdd9721964e6349e009646c08b311
-EBUILD songbird-bin-0.4.0.ebuild 2838 RMD160 3b6a6c3ff5ec7a4a4f2293381e522fa3c2de1585 SHA1 1c0363b927f09e3f95821ef6e0670088cf437578 SHA256 0d28e69f0db00341349fa7839f16e5772946f0ba55f0b046ba2279c68d03830d
-EBUILD songbird-bin-0.5-r1.ebuild 2932 RMD160 6c7f17a194a061f8138d6921855b773925b50931 SHA1 f063e510c5d4b7e37142f806e06f83bbd0408a6f SHA256 bfb9383e1e184cd1dedb7228b6df81c8fa2643e0416deafdbde3f30bdcee3d0e
-EBUILD songbird-bin-0.5.ebuild 3044 RMD160 1e8129229a8986e8d803c6e5fb5fb20207acf54a SHA1 429a0257774fc5f52daa61c9b23c6f51e1cfd637 SHA256 d42eda933d148e7cd7a0005796bf90005cb2c693f8ab4a1d2207bc178caaa53b
-MISC ChangeLog 1293 RMD160 1ed63127cd8bf1b98736a371d51fc7384def3a55 SHA1 5470e79a7bb68492a0037cd689629e5579aa22ff SHA256 96b7e53c6e9563831eb10fc2ec877d51d84bdf042b8fb20e49b4347aa2814487
+EBUILD songbird-bin-0.5-r1.ebuild 2928 RMD160 8328bdae2f4f614b2018076c0252e3f85bafc782 SHA1 d5470831b63ef23ce8554c1488b182bd32f6ed0a SHA256 5614129f1fd3113393981556ea8c0cc65ddfea2930fb75d1c21326d74d7ba8b9
+EBUILD songbird-bin-0.5.ebuild 3040 RMD160 1f9c4d40bd478bebde42c49e951ee7dce7cf65b1 SHA1 2da98e0abd5debba7e302e33231c4cc30169a342 SHA256 8a7023f327386634953d0c8480c07baab64dfa814a3455f3c4f527b539df0d18
+MISC ChangeLog 1503 RMD160 6221c39d56eeb184413dee6ae8816e6ec3fcfac1 SHA1 006f4b99a10cd56fba86a0365d636ad3fa9a2486 SHA256 a42d1850b167f3ba4848493c61471c045b355b9f6922b456d7da49f3105f5b63
